Fixed job and icon align and size

--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ body {
   min-width: 35px;
   text-align: center;
   color: #1976d2;
+  font-size: 20px;
 }
 
 li img {
